# parcoach

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Pipfile  README  README.md  docker-compose.yml  manifest.scm  sonar-project.properties.in
src/: CMakeLists.txt
src/Parcoach/: CMakeLists.txt  Collectives.cpp  Collectives.h  Parcoach.cpp  Parcoach.h  Utils.cpp  Utils.h
src/Parcoach/INTRAPROCEDURAL_ANALYSIS/: CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.h  FunctionSummary.cpp  FunctionSummary.h  GlobalGraph.cpp  GlobalGraph.h  InterDependenceMap.h  Parcoach.intra.cpp  Parcoach.intra.h  Utils.cpp  Utils.h
src/Parcoach/Parcoach_MPI/: Parcoach.cpp
src/Parcoach/Parcoach_OMP/: CMakeLists.txt
src/Parcoach/interprocedural_analysis/: CMakeLists.txt  FunctionSummary.cpp  FunctionSummary.h  GlobalDepGraph.h  InterDepGraph.cpp  InterDepGraph.h  IntraDepGraph.cpp  IntraDepGraph.h  Parcoach.cpp  Parcoach.h  Utils.cpp  Utils.h
src/SVG/: CMakeLists.txt  Collectives.h  Parcoach.cpp  Utils.h
src/SVG/interprocedural_analysis/: Collectives.cpp  Collectives.h  GlobalDepGraph.cpp
src/aSSA/: ASSA.h  CFGVisitors.cpp  CMakeLists.txt  CallSite.h  CollList.cpp  CollList.h  CollListFunctionAnalysis.cpp  CollListLoopAnalysis.cpp  CollectiveList.cpp  Collectives.cpp  Collectives.h  Config.h.in  Debug.cpp  DepGraph.cpp  DepGraph.h  DepGraphBuilder.cpp  DepGraphBuilder.h  DepGraphDCF.cpp  DepGraphDCF.h  DepGraphUIDA.cpp  DepGraphUIDA.h  ExtInfo.cpp  ExtInfo.h  Instrumentation.cpp  Instrumentation.h  MPICommAnalysis.cpp  MSSAMuChi.h  MemSSA.cpp  MemSSA.h  MemoryRegion.cpp  MemoryRegion.h  MemorySSA.cpp  MemorySSA.h  ModRefAnalysis.cpp  ModRefAnalysis.h  OpenMPInstr.cpp  OpenMPInstr.h  Options.cpp  Options.h  PTACallGraph.cpp  (+24 more)
src/aSSA/andersen/: Andersen.cpp  Andersen.h  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp  CycleDetector.h  ExternalLibrary.cpp  NodeFactory.cpp
src/include/parcoach/: Analysis.h  CFGVisitors.h  CUDARegistry.def  CollListFunctionAnalysis.h  CollListLoopAnalysis.h  CollectiveList.h  Collectives.h  DepGraphDCF.h  ExtInfo.h  LocalConcurrencyDetectionPass.h  MPICommAnalysis.h  MPIRegistry.def  MemoryRegion.h  MemorySSA.h  ModRefAnalysis.h  OMPRegistry.def  Options.h  Paradigms.h  Passes.h  RMAPasses.h  SerializableWarning.h  SonarSerializationPass.h  StatisticsAnalysis.h  UPCRegistry.def  Warning.h
src/instrumentation/: CMakeLists.txt
src/instrumentation/mpi/: CMakeLists.txt  MPI_DynamicCheck.c
src/instrumentation/rma/: CMakeLists.txt  Interval.cpp  Interval.h  interval.c  interval.cpp  interval.h  interval_list.c  interval_list.h  interval_tree.c  interval_tree.cpp  interval_tree.h  rma_analyzer.c  rma_analyzer.cpp  rma_analyzer.h  rma_analyzer_load_store_overload.c  rma_analyzer_load_store_overload.cpp  rma_analyzer_mpi_c_overload.c  rma_analyzer_mpi_c_overload.cpp  rma_analyzer_mpi_fort_overload.c  rma_analyzer_mpi_fort_overload.cpp  uthash.h  util.h
src/lib/: CMakeLists.txt  MPI_DynamicCheck.c  OMP_DynamicCheck.c  UPC_DynamicCheck.upc
src/plugin/: CMakeLists.txt  Register.cpp  parcoach.in
src/rma/: CMakeLists.txt  InstrumentedFunctions.def  LocalConcurrencyAnalysis.cpp  LocalConcurrencyDetection.cpp  LocalConcurrencyDetection.h  RMAInstrumentation.cpp  RMAStatisticsAnalysis.cpp
src/tool/: CMakeLists.txt  Parcoacht.cpp
src/tools/: CMakeLists.txt
src/tools/launcher/: Parcoacht.cpp
src/tools/wrapper/: CMakeLists.txt  CommandLineUtils.cpp  CommandLineUtils.h  TempFileRAII.cpp  TempFileRAII.h  Wrapper.cpp
src/utils/: Collectives.cpp  Collectives.h  Options.cpp
src/words/: AllWordsPass.cpp  AllWordsPass.h  CMakeLists.txt  CollectiveRepresentation.cpp  CollectiveRepresentation.h  Concatenator.cpp  Concatenator.h  DebugSet.cpp  DebugSet.h  FunctionBFS.cpp  FunctionBFS.h  LoopSorter.cpp  LoopSorter.h  PointsStage  Word.cpp  Word.h  WordsBasicBloc.cpp  WordsBasicBloc.h  WordsFunction.cpp  WordsFunction.h  WordsLoop.cpp  WordsLoop.h  WordsModule.cpp  WordsModule.h  globals.cpp  globals.h
tests/: CMakeLists.txt  checkpass.c  default.cfg.in  file_contains.py  lit.site.cfg.in  parcoach_grep.in
tests/CUDA/: Makefile  Makefile.inc  README  deadlock.cu  reduce.cu  shared.cu
tests/MBI/: CMakeLists.txt
tests/MBI/ref/: CollCallOrder_Allgather_Allgatherv_nok_0.txt  CollCallOrder_Allgather_Bcast_nok_0.txt  (+568 more)
tests/MPI/: Aislinn_invalid_order.c.expected  CIVL_BcastReduce.c  CIVL_BcastReduce2.c.expected  CIVL_BcastReduce_bad.c.expected  CIVL_barrierReduce.c  CIVL_barrierReduce.c.expected  CIVL_barrierScatter.c.expected  CIVL_bcast_bad.c.expected  CMakeLists.txt  MPIexample.c.expected  Makefile  README  error2.c  error2.c.expected  field-sensitive.c  index-dep.c  index-dep.c.expected  lit.cfg.in  loop_barrier.c.expected  loop_barrier2.c  loop_barrier2.c.expected  loop_exit.c  loop_exit.c.expected  loop_exit2.c.expected  loop_finalize.c  loop_finalize.c.expected  mismatch.c  mismatch.c.expected  mismatch_barrier.c.expected  mismatch_barrier2.c.expected  mismatch_barrier3.c.expected  mismatch_barrier4.c.expected  mismatch_barrier5.c.expected  mismatch_barrier6.c.expected  mismatch_barrier_com.c.expected  mismatch_barrier_nb.c  mismatch_barrier_nb.c.expected  noerror.c  not_verifiable.c  not_verifiable.c.expected  (+9 more)
tests/OMP/: CMakeLists.txt  Makefile  README  deadlock_test.c  example_indirect.c  inter_example.c  lit.cfg.in  lit.cfg.py.in  loop_barrier.c  loop_barrier2.c  mismatch_barrier.c  mismatch_barrier_v2.c  motivating_example.c  motivating_example_sections.c  no_debug_info.c  stats.c  test.c  test_noerror.c
tests/UPC/: Makefile  barrier_noerror.upc  ex_broadcast.upc  ex_broadcast_noerror.upc  mismatch_barrier.upc
tests/WordsSet/: CMakeLists.txt  concatenate_test.cpp
tests/coverage/: CMakeLists.txt  extract_coverage.py
tests/features/: CMakeLists.txt  assembly.ll  broken.ll  dump-mssa.ll  lit.cfg.in  missing-extinfo.ll  simple-fail.ll  sonar-json.ll  version.ll
tests/interface/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/rma/: CMakeLists.txt  intersections.cpp
(+1216 files in other folders)
